saas 2 cs1692.2x hw1-part1

--- a/app/views/admin/shared/_edit.html.erb
+++ b/app/views/admin/shared/_edit.html.erb
@@ -4,3 +4,15 @@
   <%= render :partial => "form" %>
 
 <% end %>
+
+<%= form_tag({ :controler => 'admin/content', :action => 'merge', :id => @article.id }, :method => 'put', :class => 'article') do %>
+
+
+  <div class=''>
+    <h4><%= _("Merge Articles") %></h4>
+    <%= text_field_tag(:merge_with, 'Article ID') %>
+    <%= submit_tag 'Merge' %>
+  </div>
+
+<% end %>
+
