--- a/app/views/admin/shared/_edit.html.erb
+++ b/app/views/admin/shared/_edit.html.erb
@@ -5,14 +5,15 @@
 
 <% end %>
 
+<% if @current_user.admin? %>
 <%= form_tag({ :controler => 'admin/content', :action => 'merge', :id => @article.id }, :method => 'put', :class => 'article') do %>
-
 
   <div class=''>
     <h4><%= _("Merge Articles") %></h4>
     <%= text_field_tag(:merge_with, 'Article ID') %>
     <%= submit_tag 'Merge' %>
   </div>
+<% end %>
 
 <% end %>
 
